--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,15 @@ plugins {
 group 'to-do.list'
 version '1.0-SNAPSHOT'
 
-applicationName = "todo"
+// applicationName = "todo"
 mainClassName = 'App'
 
+// sourceCompatibility = '17'  // Update to Java 17 compatibility
+// targetCompatibility = '17'   // Ensure target compatibility as well
+
+
 sourceCompatibility = 1.8
+// targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
